added database implementation for ExpenseItemsSErvicec

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MSSqlConnection": "Data Source=172.17.0.1;Initial Catalog=ExpenseItemsDB;User ID=sa;Password=Password12345!;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
